--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.5.1
   flutter_slidable: ^3.1.1
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
